--- a/src/App.css
+++ b/src/App.css
@@ -18,13 +18,6 @@
   box-shadow: 0 4px 15px rgba(100, 108, 255, 0.67); 
 }
 
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
 #name {
   font-size: 3rem; 
   font-weight: bold; 
@@ -64,5 +57,8 @@ button:focus-visible {
 @media (max-width: 500px) {
   #name {
     font-size: 2rem; /* Decrease font size for small screens */
+  }
+  #timer{
+    font-size: 1.5rem;
   }
 }
